vlib/v/checker/tests/chan_elem_type_unknown.vv
fn main() {
	_ := chan NonExistingType{}
}
